<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#fff1f1f1"
        >



    <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/make">

        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_text_for_encryptEditText"
                android:id="@+id/encryptEditText"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_above="@+id/linearlay"
                android:padding="3dp"
                android:inputType="textMultiLine"
                android:minLines="1"
                android:maxLines="15"
                android:scrollbars="vertical"
                />


        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="50dp"
                      android:orientation="horizontal"
                      android:layout_centerInParent="true"
                      android:id="@+id/linearlay"
                      android:weightSum="3.8">

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/lookKeyButton"
                    android:id="@+id/lookKeyButton"
                    android:layout_weight="1.4"/>



            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/generateButton"
                    android:id="@+id/generateButton"
                    android:layout_weight="1.4"
                    />

            <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />

        </LinearLayout>



        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/start_text_for_decryptEditText"
                  android:background="#ffdafdff"
                  android:textColor="#000000"
                  android:id="@+id/resultTextView"
                  android:textSize="20sp"
                  android:textStyle="bold"
                  android:layout_alignParentBottom="true"
                  android:layout_below="@+id/linearlay"
                  android:textIsSelectable="true" android:padding="3dp"/>


    </RelativeLayout>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/encryptButton"
            android:id="@+id/make"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_alignParentBottom="true"/>


</RelativeLayout>